--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "serve",
-    "lint": "eslint . --ext .js; exit 0",
+    "lint": "eslint .",
+    "lintFix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
